--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t uglysunshine/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run uglysunshine/react-test npm test -- --coverage
+  - docker run -e CI=true uglysunshine/react-test npm test
 
 after_success:
   - docker build -t uglysunshine/multi-client ./client
@@ -29,7 +29,7 @@ deploy:
   bucket_name: 'elasticbeanstalk-us-east-1-565678810090'
   bucket_path: 'docker_multi'
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
 
