--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t uglysunshine/multi-nginx ./nginx
   - docker build -t uglysunshine/multi-server ./server
   - docker build -t uglysunshine/multi-worker ./worker
-  - echo $DOCKER_PASSWORD | docker login -u $DOCKER_ID --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push uglysunshine/multi-client
   - docker push uglysunshine/multi-nginx
   - docker push uglysunshine/multi-server
